--- a/package.json
+++ b/package.json
@@ -1,43 +1,48 @@
 {
-  "name": "health-graphql",
-  "version": "1.0.0",
-  "description": "",
-  "dependencies": {},
-  "devDependencies": {
-    "autod": "^3.0.1",
-    "egg-bin": "^4.3.7",
-    "egg-ci": "^1.8.0",
-    "eslint": "^4.18.1",
-    "eslint-config-egg": "^7.0.0",
-    "webstorm-disable-index": "^1.2.0"
-  },
-  "engines": {
-    "node": ">=6.0.0"
-  },
-  "scripts": {
-    "autod": "autod",
-    "lint": "eslint .",
-    "test": "npm run lint -- --fix && egg-bin pkgfiles && npm run test-local",
-    "test-local": "egg-bin test",
-    "cov": "egg-bin cov",
-    "ci": "npm run lint && egg-bin pkgfiles --check && npm run cov",
-    "pkgfiles": "egg-bin pkgfiles"
-  },
-  "ci": {
-    "version": "8"
-  },
-  "eslintIgnore": [
-    "coverage",
-    "dist"
-  ],
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "files": [
-    "lib",
-    "index.js"
-  ],
-  "author": "luojieyy@gmail.com",
-  "license": "MIT"
+	"name": "health-graphql",
+	"version": "1.0.0",
+	"description": "",
+	"dependencies": {
+		"dataloader": "^1.4.0",
+		"egg": "^2.4.1",
+		"egg-graphql": "^2.1.0"
+	},
+	"devDependencies": {
+		"autod": "^3.0.1",
+		"egg-bin": "^4.3.7",
+		"egg-ci": "^1.8.0",
+		"eslint": "^4.18.1",
+		"eslint-config-egg": "^7.0.0",
+		"webstorm-disable-index": "^1.2.0"
+	},
+	"engines": {
+		"node": ">=6.0.0"
+	},
+	"scripts": {
+		"dev": "egg-bin dev",
+		"autod": "autod",
+		"lint": "eslint .",
+		"test": "npm run lint -- --fix && egg-bin pkgfiles && npm run test-local",
+		"test-local": "egg-bin test",
+		"cov": "egg-bin cov",
+		"ci": "npm run lint && egg-bin pkgfiles --check && npm run cov",
+		"pkgfiles": "egg-bin pkgfiles"
+	},
+	"ci": {
+		"version": "8"
+	},
+	"eslintIgnore": [
+		"coverage",
+		"dist"
+	],
+	"repository": {
+		"type": "git",
+		"url": ""
+	},
+	"files": [
+		"lib",
+		"index.js"
+	],
+	"author": "luojieyy@gmail.com",
+	"license": "MIT"
 }
