--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
 	"dependencies": {
 		"dataloader": "^1.4.0",
 		"egg": "^2.4.1",
-		"egg-graphql": "^2.1.0"
+		"egg-graphql": "^2.1.0",
+		"egg-scripts": "^2.5.1"
 	},
 	"devDependencies": {
 		"egg-bin": "^4.3.7",
 		"egg-ci": "^1.8.0",
 		"eslint": "^4.18.1",
-		"eslint-config-egg": "^7.0.0",
-		"webstorm-disable-index": "^1.2.0"
+		"eslint-config-egg": "^7.0.0"
 	},
 	"engines": {
 		"node": ">=6.0.0"
 	},
 	"scripts": {
+		"start": "egg-scripts start",
+		"stop": "egg-scripts stop",
 		"dev": "egg-bin dev",
 		"autod": "autod",
 		"lint": "eslint .",
